feat: add basic auth implements & token authicator
